Fixed link on Approvals show and Featured Products new form

--- a/app/views/admin/approvals/show.html.erb
+++ b/app/views/admin/approvals/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-12">
       <ol class="breadcrumb">
         <li><%= link_to "Admin Content Manager", admin_root_path %></li>
-        <li><%= link_to 'Approvals', admin_categories_path %></li>
+        <li><%= link_to 'Approvals', admin_approvals_path %></li>
         <li class="active"> <%= @approval.title %> </li>
       </ol>
     </div>
